# quantumopt

./: .env.example  .gitignore  MANIFEST.in  README.md  _fix_cell1.py  add_qasmBench_to_dataset.py  benchmark_analysis_v3.json  benchmark_real_circuits.json  benchmark_report_v3.txt  benchmark_results_v3.json  clean_dataset.py  dataset_v3_iqp.json  dataset_v3_qaoa.json  dataset_v3_vqe.json  diagnose_quantumopt.py  diagnose_swap.py  generate_benchmark_datasets.py  generate_dataset.py  pyproject.toml  requirements.txt  setup.py  smoke_test.py  test_real_circuits.py  train.py  train_gnn.ipynb  validate_dataset.py
quantumopt/: __init__.py  compiler.py
quantumopt/backends/: __init__.py  ibm_backend.py
quantumopt/benchmarks/: __init__.py  compare.py
quantumopt/data/: __init__.py  pipeline.py
quantumopt/graph/: __init__.py  encoder.py  features.py
quantumopt/llm/: __init__.py  explainer.py
quantumopt/models/: __init__.py  gat.py  gnn.py  rl_agent.py
quantumopt/models/weights/: README.md  gnn_best.pt
tests/: test_compiler.py  test_encoder.py  test_gnn.py
